--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -6,5 +6,7 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 
-# Backend API URL
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# Auth Service URL
+NEXT_PUBLIC_AUTH_API_URL=http://localhost:8001
+# Product Service URL
+NEXT_PUBLIC_PRODUCT_API_URL=http://localhost:8002
