--- a/backend/auth_service/requirements.txt
+++ b/backend/auth_service/requirements.txt
@@ -8,3 +8,6 @@ phonenumbers==8.13.25
 slowapi==0.1.9
 redis==5.0.1
 python-dotenv==1.0.0
+sqlalchemy[asyncio]==2.0.23
+asyncpg==0.29.0
+alembic==1.12.1
