--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -10,3 +10,5 @@ NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 NEXT_PUBLIC_AUTH_API_URL=http://localhost:8001
 # Product Service URL
 NEXT_PUBLIC_PRODUCT_API_URL=http://localhost:8002
+# Cart Service URL
+NEXT_PUBLIC_CART_API_URL=http://localhost:8003
