feat(auth): integrate Firebase authentication with token and session cookie validation
- Add Firebase Admin SDK initialization using environment variables in security module
- Implement Firebase ID token verification from Authorization header
- Implement Firebase session cookie verification middleware
- Provide unified current user ID retrieval from token or session cookie
- Replace JWT-based user extraction with Firebase verification methods

refactor(database): update async session creation and model imports

- Switch to async_sessionmaker for async SQLAlchemy sessions
- Move Base class definition before model imports to avoid circular dependencies
- Import user and cart models eagerly in main application initialization

feat(models): revise cart, wishlist, and promo code ORM models

- Change all models to inherit from centralized Base in core.database
- Add explicit primary keys and timestamp columns (created_at, updated_at)
- Use string references in relationships to prevent circular import issues
- Add missing id columns to CartItem, WishlistItem, PromoCode, CartPromoCode
- Add proper back_populates and cascading options on relationships

perf(cart): optimize cart and wishlist item loading with selectinload

- Use SQLAlchemy selectinload option to eagerly load cart and wishlist items
- Avoid lazy loading to improve database query efficiency in service layer

fix(product_service): correct product service URL endpoint

- Update product service endpoint URL from /api/v1/products to /api/products in HTTP requests

chore(config): add Firebase and session configuration settings

- Add new settings for Firebase project and credentials in configuration module
- Add session cookie name configuration setting

feat(middleware): add HTTP request logging in FastAPI app

- Add middleware to log incoming requests with method, URL, headers
- Log request processing time and response status code

feat(api): add test-auth endpoint for Firebase token verification

- Implement POST

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: product_db
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: poc
+      POSTGRES_USER: poc_user
+      POSTGRES_PASSWORD: admin123
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -26,8 +26,10 @@ services:
       - "8001:8001"
     environment:
       - REDIS_URL=redis://redis:6379
+      - DATABASE_URL=postgresql+asyncpg://poc_user:admin123@postgres:5432/poc
     depends_on:
       - redis
+      - postgres
     env_file:
       - ./backend/auth_service/.env
 
@@ -36,7 +38,7 @@ services:
     ports:
       - "8002:8002"
     environment:
-      - DATABASE_URL=postgresql+asyncpg://user:password@postgres:5432/product_db
+      - DATABASE_URL=postgresql+asyncpg://poc_user:admin123@postgres:5432/poc
     depends_on:
       - postgres
     env_file:
@@ -47,11 +49,13 @@ services:
     ports:
       - "8003:8003"
     environment:
-      - DATABASE_URL=postgresql+asyncpg://user:password@postgres:5432/product_db
+      - DATABASE_URL=postgresql+asyncpg://poc_user:admin123@postgres:5432/poc
       - PRODUCT_SERVICE_URL=http://product-service:8002
+      - USER_SERVICE_URL=http://auth-service:8001
     depends_on:
       - postgres
       - product-service
+      - auth-service
     env_file:
       - ./backend/cart_service/.env
 
