fix(db): resolve foreign key error for carts user_id column
- Remove dependency on missing 'users' table causing NoReferencedTableError
- Prevent failures during cart retrieval and commit operations
- Fix async session commit rollback caused by FK constraint issue
- Ensure stable database interactions for cart and wishlist endpoints
- Address 500 Internal Server Errors from SQLAlchemy due to FK misconfiguration

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -6,9 +6,5 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 
-# Auth Service URL
-NEXT_PUBLIC_AUTH_API_URL=http://localhost:8001
-# Product Service URL
-NEXT_PUBLIC_PRODUCT_API_URL=http://localhost:8002
-# Cart Service URL
-NEXT_PUBLIC_CART_API_URL=http://localhost:8003
+# Gateway API URL (All services routed through gateway)
+NEXT_PUBLIC_GATEWAY_API_URL=http://localhost:8000
