--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,25 @@ services:
     env_file:
       - ./backend/cart_service/.env
 
+  order-service:
+    build: ./backend/order_service
+    ports:
+      - "8004:8004"
+    environment:
+      - DATABASE_URL=postgresql+asyncpg://poc_user:admin123@postgres:5432/poc
+      - USER_SERVICE_URL=http://auth-service:8001
+      - PRODUCT_SERVICE_URL=http://product-service:8002
+      - CART_SERVICE_URL=http://cart-service:8003
+      - PAYMENT_SERVICE_URL=http://payment-service:8005
+      - NOTIFICATION_SERVICE_URL=http://notification-service:8006
+    depends_on:
+      - postgres
+      - auth-service
+      - product-service
+      - cart-service
+    env_file:
+      - ./backend/order_service/.env
+
   gateway:
     build: ./backend/gateway
     ports:
@@ -67,10 +86,12 @@ services:
       - AUTH_SERVICE_URL=http://auth-service:8001
       - PRODUCT_SERVICE_URL=http://product-service:8002
       - CART_SERVICE_URL=http://cart-service:8003
+      - ORDER_SERVICE_URL=http://order-service:8004
     depends_on:
       - auth-service
       - product-service
       - cart-service
+      - order-service
     env_file:
       - ./backend/gateway/.env
 
